--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,6 @@
     <color name="white">#FFFFFFFF</color>
 
     <color name="toolbar_bg">#D1D1D1</color>
+    <color name="status_color">#BCBCBC</color>
+    <color name="placeholder_bg">#535151</color>
 </resources>
