--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -28,9 +28,10 @@
 
                 <ImageView
                     android:id="@+id/back_btn"
-                    android:layout_width="25dp"
-                    android:layout_height="25dp"
-                    android:background="?android:attr/selectableItemBackgroundBorderless"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:foreground="?android:attr/selectableItemBackgroundBorderless"
+                    android:padding="5dp"
                     android:src="@drawable/back_arrow" />
 
                 <TextView
@@ -99,7 +100,7 @@
             <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
+                android:layout_marginTop="12dp"
                 app:cardBackgroundColor="@color/toolbar_bg"
                 app:cardCornerRadius="10dp"
                 app:cardElevation="5dp">
@@ -135,7 +136,7 @@
             <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
+                android:layout_marginTop="12dp"
                 app:cardBackgroundColor="@color/toolbar_bg"
                 app:cardCornerRadius="10dp"
                 app:cardElevation="5dp">
@@ -171,7 +172,7 @@
             <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
+                android:layout_marginTop="12dp"
                 android:layout_marginBottom="16dp"
                 app:cardBackgroundColor="@color/toolbar_bg"
                 app:cardCornerRadius="15dp"
